--- a/nginx.conf
+++ b/nginx.conf
@@ -46,11 +46,13 @@ http {
             root   /usr/share/nginx/html/;
             index  index.html index.htm;
         } 
-
-        error_page 500 502 503 504 /50x.html {
+        location ^~/api/ {
+                proxy_pass http://172.16.26.128:8778/;
+            break;
+        }
+        error_page 500 502 503 504 /50x.html;
         location = /50x.html {
-            root /usr/share/nginx/html/;
-        }    
+            root /usr/share/nginx/html/;   
         }
     }
 }
